# armfly-v7-board

./: .gitignore  README.md
2_rt-thread/init/: project.ewp  project.uvoptx  project.uvprojx
2_rt-thread/init/board/: Kconfig
2_rt-thread/work/: .clang-format  .config  CMakeLists.txt  SConstruct  project.uvoptx  project.uvprojx  rtconfig.h  template.ewp  template.uvoptx  template.uvprojx
2_rt-thread/work/applications/: main.c
2_rt-thread/work/board/: Kconfig  SConscript
2_rt-thread/work/board/CubeMX_Config/: CubeMX_Config.ioc
2_rt-thread/work/board/CubeMX_Config/Inc/: stm32h7xx_hal_conf.h
2_rt-thread/work/board/CubeMX_Config/MDK-ARM/: CubeMX_Config.uvoptx  CubeMX_Config.uvprojx
2_rt-thread/work/board/CubeMX_Config/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
2_rt-thread/work/board/bsp/: SConscript  bsp.c  bsp.h
2_rt-thread/work/board/bsp/src/: bsp_fmc_io.c
2_rt-thread/work/board/linker_scripts/: link.icf
2_rt-thread/work/libraries/HAL_Drivers/: drv_sdram.c
